# Basic-code

./: Dynamic Link Library  Makefiles.cpp  MarkDownFile  Math expression
DDL/: CMakeLists.txt  main.cpp  module.cpp
Precompiled-HeaderFiles/: CompiledTime.md
